@@ -5,6 +5,7 @@
   * Added #send_keys to Druid::Elements::Element
   * Added #refresh to page object
   * Added #clear method to Element
+  * Added #in_frame to Accessors to handle frame and iframe access
 === 2016-06-21
 * Enhancements
   * Handling popups
